--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -17,15 +17,21 @@
     "test:e2e": "playwright test"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.2.0",
+    "@reown/appkit": "^1.0.0",
+    "@reown/appkit-adapter-wagmi": "^1.0.0",
+    "@tanstack/react-query": "^5.17.0",
+    "ethers": "^6.9.0",
+    "i18next": "^25.6.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^16.3.2",
     "react-router-dom": "^6.21.0",
-    "ethers": "^6.9.0",
-    "@tanstack/react-query": "^5.17.0",
-    "zustand": "^4.4.7",
+    "viem": "^2.0.0",
     "wagmi": "^2.5.0",
-    "@web3modal/wagmi": "^4.0.0",
-    "viem": "^2.0.0"
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@playwright/test": "^1.40.0",
@@ -52,4 +58,3 @@
     "vitest": "^1.0.4"
   }
 }
-
