--- a/packages/frontend/nginx.conf
+++ b/packages/frontend/nginx.conf
@@ -63,18 +63,25 @@ server
         return 403;
     }
 
-    location ~ .*\\.(gif|jpg|jpeg|png|bmp|swf)$
+    # 静态资源缓存 - 优先匹配静态文件
+    location ~ .*\\.(gif|jpg|jpeg|png|bmp|swf|ico|svg|webp)$
     {
         expires      30d;
         error_log /dev/null;
         access_log /dev/null;
     }
 
-    location ~ .*\\.(js|css)?$
+    location ~ .*\\.(js|css|woff|woff2|ttf|eot|otf)$
     {
         expires      12h;
         error_log /dev/null;
         access_log /dev/null;
+    }
+
+    # SPA 路由支持 - 所有其他路由都返回 index.html
+    # 注意：此配置必须在静态资源 location 之后，确保静态文件优先匹配
+    location / {
+        try_files $uri $uri/ /index.html;
     }
     access_log  /www/wwwlogs/swap.chatone.info.log;
     error_log  /www/wwwlogs/swap.chatone.info.error.log;
