Remove ChatOneSwapV3.md and add new scripts for dex-wrapper in package.json

--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "contracts:compile": "pnpm --filter contracts compile",
     "contracts:test": "pnpm --filter contracts test",
     "contracts:deploy": "pnpm --filter contracts deploy",
+    "dex-wrapper:compile": "pnpm --filter dex-wrapper compile",
+    "dex-wrapper:test": "pnpm --filter dex-wrapper test",
+    "dex-wrapper:deploy:testnet": "pnpm --filter dex-wrapper deploy:testnet",
+    "dex-wrapper:deploy:mainnet": "pnpm --filter dex-wrapper deploy:mainnet",
     "frontend:dev": "pnpm --filter frontend dev",
     "frontend:build": "pnpm --filter frontend build",
     "frontend:start": "pnpm --filter frontend start",
